static/css/s2.css
/* ... */
.headerOnly .headerInner, .headerInner.boxShadow {
  box-shadow: 0 1px 3px rgba(0,0,0,0.2);
}
.interface-hebrew .headerInner {
  direction: rtl;
}
.headerInner .headerNavSection {
  display: flex;
  justify-content: flex-start;
}
.headerInner .headerHomeSection {
  position: absolute;
  top: 17px;
  left: 50%;
  margin-left: -46px;
}
.headerInner .headerLinksSection {
  display: flex;
  justify-content: flex-end;
  min-width: 40%;
  align-items: center;
}
.header .header-nav {
  margin-top: 1px;
}
.header .header-links {
  margin-top: 1px;
}
.header .library, .header .home, .header .my-profile, .header .notifications, .header .readerNavMenuSearchButton {
  cursor: pointer;
}
.header .library, .header .my-profile, .header .readerNavMenuSearchButton {
  display: inline-block;
  color: #999;
}
.header .searchBox {
  overflow: hidden;
  display: flex;
  align-items: center;
  padding: 0;
  text-align: inherit;
  margin: 0 17px 0 17px;
  background: #EDEDEC;
  border-radius: 250px;
  width: 140px;
  height: 30px;
}
.header .searchBox.searchFocused {
  width: 240px;
}
.header .searchBox input {
  background-color: transparent; /*for firefox */
}
.header .searchBox input::placeholder {
  font-style: normal;
}
.header .search {
  outline: none;
  border: none;
  box-shadow: none;
  color: black;
  font-size:  18px;
  margin: 0;
  width: 100px;
}
.header .searchFocused .search {
  width: 160px;
}
.header .search.hebrewSearch {
  font-size: 18px;
}
.ui-autocomplete .ui-menu-item.search-override {
  border-top: solid 1px #ccc;
  padding-top: 12px;
}
.ui-autocomplete .ui-menu-item.hebrew-result a {
  direction: rtl;
}
.ui-autocomplete .ui-menu-item.english-result a {
  direction: ltr;
}
.header .home {
  margin-top: 1px;
}
.header .home img {
  vertical-align: middle;
  width: 92px;
}
.header .login:first-child{
  -webkit-margin-end: 0px;
  -moz-margin-end: 0px;
  margin-inline-end: 0px;
}
.header .notifications {
  margin: 0 17px;
}
@media (max-width: 540px) {
  .header .home {
    display: none;
  }
  .header .accountLinks .login {
    margin-left: 16px;
  }
  .header .searchBox input{
    width: 45%;
  }
  .header .login:first-child {
    margin: auto 20px;
  }
  .headerInner .headerNavSection{
    width: 48%;
  }
  img.keyboardInputInitiator{
    display: none;
  }
  .nochrome .header .home {
    display: inline;
  }
}
.header .accountLinks {
  display: flex;
  align-items: center;
  font-size: 16px;
  margin-top: 2px;
  color: #666;
}
.header .accountLinks.anon a:last-child {
  background: #FFFFFF;
  border: 1px solid #EDEDEC;
  box-sizing: border-box;
  border-radius: 6px;
}
.header .interfaceLinks {
  display: block;
  align-items: center;
  margin-top: 2px;
  color: #666;
  cursor: pointer;
  position: relative;
  -webkit-margin-start: 20px;
  -moz-margin-start: 20px;
  margin-inline-start: 20px;
}
.header .interfaceLinks img {
  height: 18px;
  width: 18px;
  vertical-align: middle;
  -webkit-margin-end: 5px;
  -moz-margin-end: 5px;
  margin-inline-end: 5px;
}
.header .interfaceLinks a.interfaceLinks-button::after {
  display: inline-block;
  background-image: url("/static/icons/chevron-down.svg");
  height: 10px;
  width: 10px;
  vertical-align: middle;
  content: "";
}
.header .interfaceLinks .interfaceLinks-menu {
  top: 35px;
  position: absolute;
  z-index: 1;
  position: absolute;
  width: 150px;
  background: #FBFBFA;
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
  border-radius: 6px;
  display: none;
}
.header .interfaceLinks .interfaceLinks-menu.open {
  display: block;
}
.interface-english .header .interfaceLinks .interfaceLinks-menu {
  right: 0px;
}
.interface-hebrew .header .interfaceLinks .interfaceLinks-menu {
  left: 0px;
}
.header .interfaceLinks .interfaceLinks-header {
  font-style: normal;
  font-weight: normal;
  font-size: 13px;
  line-height: 18px;
  color: #999999;
  padding: 12px;
  border-bottom: 1px solid #CCCCCC;
}
.interfaceLinks-options {
  display: flex;
  flex-direction: column;
  padding: 4px 0;
}
.header .interfaceLinks .interfaceLinks-option {
  display: flex;
  text-decoration: none;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 23px;
  text-align: right;
  color: #666666;
  padding: 5px;
}
.header .interfaceLinks .interfaceLinks-option::before {
  content: "";
  font-family: FontAwesome;
  color: #999;
  font-weight: normal;
  font-size: 13px;
  font-style: normal;
  padding: 0 15px;
}
.header .interfaceLinks .interfaceLinks-option.active {
  order: -1;
}
.header .interfaceLinks .interfaceLinks-option.active::before {
  content: "\f00c";
  padding: 0 8px;
}
@media screen and (max-width: 700px) {
  .header .interfaceLinks {
    display: none;
  }
  .header .accountLinks .login{
    padding: 5px 5px;
  }
  .header .accountLinks{
    -webkit-margin-end: 0px;
    -moz-margin-end: 0px;
    margin-inline-end: 0px;
  }
  .header .login:first-child{
    margin:auto;
  }
}
.header .my-profile, .header .notifications {
  display: inline-block;
  vertical-align: middle;
}
.header .library, .header .my-profile {
  font-size: 24px;
  line-height: 24px;
}
.header .library .fa {
  position: relative;
  top: 1px;
}
.header .notifications {
  display: inline-block;
  line-height: 24px;
  height: 24px;
  width: 24px;
  text-align: center;
  border-radius: 50%;
  background-color: #aaa;
  color: white;
  font-size: 16px;
}
.header .notifications.unread {
  background-color: #EFB4B6;
}
.header .login {
  color: #666;
  display: inline-block;
  line-height: 1;
  padding: 8px 15px;
}
.overlay {
  width: 100%;
  height: 100%;
  background-color: black;
  opacity: 0.3;
  position: fixed;
  z-index: 1001;
}
.sefariaModalBox {
  transition: none;
}
#interruptingMessageBox {
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  width: 100%;
  height: 100%;
  left: 0;
  right: 0;
  top: 0;
  z-index: 1001;
  opacity: 1;
  transition: opacity .3s ease-in;
}
#interruptingMessageBox.hidden {
  opacity: 0;
}
/* ... */

